<resources>
    <string name="app_name">Calculadora XP - Professional Edition -</string>
    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="punto">.</string>
    <string name="igual">=</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="multi">x</string>
    <string name="divi">/</string>
    <string name="borrar">←</string>
    <string name="C">C</string>
    <string name="CE">CE</string>
    <string name="PlusMinus">±</string>
    <string name="MemMas">M+</string>
    <string name="MemMen">M-</string>
    <string name="MenClr">MC</string>
    <string name="MemTot">MR</string>
    <string name="button">button</string>
</resources>
